# st-api

./: .dockerignore  Dockerfile  Justfile  LOADTEST_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  create_test_image.py  eval_forest.py  image_manipulate_utils.py  pyproject.toml  railway.json  railway.toml  test_api.py
model/: decision_forest.pkl
reference/: eval_forest.py
scripts/: create_test_image.py  health-check.sh  loadtest.py  test-endpoints.sh  test_api.py
src/: image_utils.py  main.py  railway_main.py
